k8s-kustomize/services/basket.api/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: basket-api
spec:
  gateways:
  - restaurant-gateway
  http:
  - match:
    - uri:
        prefix: /basket
    route:
    - destination:
        host: basket-api
        port:
          number: 80
